# BFM-Zero

./: .gitignore  UPDATE.md  pyproject.toml  requirements.txt
config/robot/: g1_real.yaml
docs/: train_notify.md
humanoidverse/: train.py
humanoidverse/config/robot/g1/: g1_29dof_mode15.yaml
rl_policy/: bfm_zero.py  goal.sh
scripts/: latent_pkl2npz.py
